# coin

./: .gitignore  CLAUDE.md  CMakeLists.txt  advenced-renderer-next-steps.md  boost-build.sh  coin-ecs-lessons-learned.md  coin-ecs-plan.md  coin-rearchitecture.md  coin_dod_analysis.md  coin_dod_implementation_plan.md  coin_dod_unconstrained_analysis.md  configure_cmake.sh  configure_cmake_web.sh  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-8.md
docs/: integration-test-design.md  modern-renderer-design.md
examples/: CMakeLists.txt
examples/glfw/: build.sh  build_web.sh  glfw.cpp  perpixel_fragment.glsl  perpixel_vertex.glsl
include/Inventor/: ModernVulkanBackend.h  PersistentSceneManager.h  SbByteBufferP.icc  SoRenderManager.h  SoSceneManager.h  VulkanCullingSystem.h  VulkanRenderer.h  VulkanStateManager.h
src/: CMakeLists.txt  CoinTracyConfig.h
src/actions/: CMakeLists.txt  SoGLRenderAction.cpp  SoHandleEventAction.cpp  SoModernRenderAction.cpp
src/bundles/: SoMaterialBundle.cpp
src/caches/: SoGLCacheList.cpp  SoPrimitiveVertexCache.cpp
src/draggers/: SoDragger.cpp
src/elements/: SoDepthBufferElement.cpp  SoElement.cpp  SoProjectionMatrixElement.cpp  SoViewingMatrixElement.cpp
src/glad/: CMakeLists.txt
src/glue/: gl.cpp  gl_agl.cpp  gl_cgl.cpp  glp.h
src/misc/: CMakeLists.txt  PersistentSceneManager.cpp  SoDB.cpp  SoSceneManager.cpp
test-code/: CMakeLists.txt
test-code/benchmark-ecs/: benchmark-test.cpp
test-code/shadow-ecs/: shadow-ecs-test.cpp
test-code/shadow-ecs-vk/: vulkan-gui-test.cpp  vulkan-test.cpp
(+146 files in other folders)
